--- a/about.html
+++ b/about.html
@@ -89,9 +89,6 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">Services</a>
-                </li>
-                <li class="nav-item">
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
                 <li class="nav-item">
@@ -121,18 +118,19 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                About Us
+                St.ജോർജ്ജ്  യൂത്ത് അസോസിയേഷൻ ചേലക്കര 
               </h2>
-            </div>
-            <p>
-              ചേലക്കര സെൻ്റ് ജോർജ്ജ് യാക്കോബായ സുറിയാനി പള്ളിയുടെ കീഴിൽ പ്രവർത്തിക്കുന്ന 
-              യുവജന പ്രസ്ഥാനമാണ് സെൻ്റ് ജോർജ്ജ് യൂത്ത് അസോസിയേഷൻ.ഈ പ്രസ്ഥാനത്തിൽ നാളിതുവരെ
-              നൂറിൽപരം യുവതി യുവാക്കൾ ഇടവകയോട് ചേർന്ന് നിന്ന് പ്രവർത്തിച്ചു വരുന്നു .
-              പരിശുദ്ധ സഭയുടെ പാരമ്പര്യത്തിലും വിശ്വാസത്തിലും, സമൂഹത്തോടുള്ള പ്രിബദ്ധതയിലും മുന്നോട്ട് 
-              പോകുന്ന ഈ സംഘടന നിരവധി ചാരിറ്റി പ്രവർത്തനങ്ങൾക്ക് നേതൃത്വം നൽകിവരുന്നു.
-              ഇടവകയുടെ ആത്മീയവും ഭൗതികവുമായ കാര്യങ്ങളിൽ  സെൻ്റ് ജോർജ് യൂത്ത് അസോസിയേഷൻ
-              നിരന്തരം പ്രവർത്തിച്ചുകൊണ്ടിരിക്കുന്നു
-            </p>
+              <p>
+                സെന്റ് ജോർജ്ജ്  യൂത്ത് അസോസിയേഷൻ ചേലക്കര സെന്റ് ജോർജ്ജ്  യൂത്ത് അസോസിയേഷൻ ചേലക്കര, യാക്കോബായ സിറിയൻ ഓർത്തഡോക്സ് യൂത്ത് അസോസിയേഷന്റെ ഭാഗമായി ചേലക്കര സെന്റ് ജോർജ്ജ് യാക്കോബായ സുറിയാനി പള്ളിക്ക് കീഴിൽ പ്രവർത്തിക്കുന്ന  ആത്മീയ സംഘടനയാണ്. 
+                യുവാക്കൾ നമ്മുടെ കർത്താവായ യേശുക്രിസ്തുവിന്റെ ഹൃദയത്തോട് വളരെ അടുത്തവരാണ് ."യഹോവ ഭക്തി  ജ്ഞാനത്തിന്റെ ആരംഭവും; പരിശുദ്ധനെക്കുറിച്ചുള്ള പരിജ്ഞാനം വിവേകമാകുന്നു." സാദൃശ്യവാക്യങ്ങൾ 9 :10 ,11 
+              </p>
+              <p> 
+                യാക്കോബായ സുറിയാനി സഭയുടെ വിശ്വാസം, പാരമ്പര്യങ്ങൾ, ആരാധന എന്നിവ വരും തലമുറയിൽ ഉയർത്തിപ്പിടിക്കുന്നുവെന്ന് ഉറപ്പാക്കാനും , പ്രധാനമായും  ഇന്നത്തെ ആധുനിക സാമൂഹിക പരിതസ്ഥിതിയിൽ , ഇന്നത്തെ യുവാക്കൾ അഭിമുഖീകരിക്കുന്ന പ്രശ്നങ്ങൾ മനസിലാക്കാനും അറിയാനും നാം വളരെയധികം പരിശ്രമിക്കേണ്ടതുണ്ട്. 
+                ഇന്ന് യുവാക്കളുടെ പ്രശ്നങ്ങളും പ്രതിസന്ധികളും   യൂത്ത് അസോസിയേഷൻ  സജീവമായി അഭിസംബോധന ചെയ്യുന്നു. അവരുടെ കാഴ്ചപ്പാടുകളും അഭിപ്രായങ്ങളും ഉൾക്കൊള്ളുക എന്നതാണ് അസോസിയേഷന്റെ മൂലക്കല്ല്.
+              </p>
+              <p>
+                പരിശുദ്ധ സഭയുടെ പാരമ്പര്യത്തിലും വിശ്വാസത്തിലും, സമൂഹത്തോടുള്ള പ്രിബദ്ധതയിലും മുന്നോട്ട് പോകുന്നതിനോട് ഒപ്പം തന്നെ  ഈ സംഘടന നിരവധി ചാരിറ്റി പ്രവർത്തനങ്ങൾക്ക് നേതൃത്വം നൽകിവരുന്നു. സമൂഹത്തിൽ സാമ്പത്തികമായി പിന്നോക്കം നിൽക്കുന്ന വിദ്യാർത്ഥികൾക്ക് ഈ സംഘടന പഠനോപകരണങ്ങൾ വിതരണം ചെയുന്നു .ഈ വർഷത്തെ ചാരിറ്റി പ്രവർത്തനങ്ങളുടെ ഭാഗമായി 100 ഡയാലിസിസ് നടത്തുവാൻ ദൈവകൃപയാൽ തീരുമാനിച്ചിരിക്കുന്നു .കൂടാതെ  ഇടവകയുടെ ആത്മീയവും ഭൗതികവുമായ കാര്യങ്ങളിൽ സെൻ്റ് ജോർജ് യൂത്ത് അസോസിയേഷൻ നിരന്തരം പ്രവർത്തിച്ചുകൊണ്ടിരിക്കുന്നു
+              </p>
           </div>
         </div>
         <div class="col-md-6 ">
@@ -180,7 +178,6 @@
               </h4>
               <div class="info_links_menu">
                 <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
-                <a class="" href="service.html">Services</a>
                 <a class="" href="about.html"> About</a>
                 <a class="" href="activities.html">Activities</a>
                 <a class="" href="testimonial.html">Testimonial</a>
