--- a/index.html
+++ b/index.html
@@ -89,9 +89,6 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">Services</a>
-                </li>
-                <li class="nav-item">
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
                 <li class="nav-item">
@@ -229,112 +226,6 @@
     <!-- end slider section -->
   </div>
 
-
-  <!-- service section -->
-
-  <section class="service_section layout_padding">
-    <div class="service_container">
-      <div class="container ">
-        <div class="heading_container">
-          <h2>
-            Services
-          </h2>
-          <p>
-            The St. George Youth Association holds a significant position as a key spiritual organization within the St. George Jacobite Syrian Church
-          </p>
-        </div>
-        <div class="row">
-          <div class="col-md-6 col-lg-3">
-            <div class="box ">
-              <div class="img-box">
-                <img src="images/s1.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Construction
-                  Services
-                </h5>
-                <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using L
-                </p>
-                <a href="">
-                  Read More
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="box ">
-              <div class="img-box">
-                <img src="images/s2.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Building
-                  Modeling
-                </h5>
-                <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using L
-                </p>
-                <a href="">
-                  Read More
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="box ">
-              <div class="img-box">
-                <img src="images/s3.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Pre
-                  construction
-                </h5>
-                <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using L
-                </p>
-                <a href="">
-                  Read More
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="box ">
-              <div class="img-box">
-                <img src="images/s4.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Management
-                </h5>
-                <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using L
-                </p>
-                <a href="">
-                  Read More
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end service section -->
-
-
   <!-- about section -->
 
   <section class="about_section">
@@ -344,13 +235,12 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                About Us
+                St.ജോർജ്ജ്  യൂത്ത് അസോസിയേഷൻ ചേലക്കര 
               </h2>
             </div>
             <p>
-              ചേലക്കര സെൻ്റ് ജോർജ്ജ് യാക്കോബായ സുറിയാനി പള്ളിയുടെ കീഴിൽ പ്രവർത്തിക്കുന്ന 
-              യുവജന പ്രസ്ഥാനമാണ് സെൻ്റ് ജോർജ്ജ് യൂത്ത് അസോസിയേഷൻ.ഈ പ്രസ്ഥാനത്തിൽ നാളിതുവരെ
-              നൂറിൽപരം യുവതി യുവാക്കൾ ഇടവകയോട് ചേർന്ന് നിന്ന് പ്രവർത്തിച്ചു വരുന്നു .
+              സെന്റ് ജോർജ്ജ്  യൂത്ത് അസോസിയേഷൻ ചേലക്കര സെന്റ് ജോർജ്ജ്  യൂത്ത് അസോസിയേഷൻ ചേലക്കര, യാക്കോബായ സിറിയൻ ഓർത്തഡോക്സ് യൂത്ത് അസോസിയേഷന്റെ ഭാഗമായി ചേലക്കര സെന്റ് ജോർജ്ജ് യാക്കോബായ സുറിയാനി പള്ളിക്ക് കീഴിൽ പ്രവർത്തിക്കുന്ന  ആത്മീയ സംഘടനയാണ്. 
+              യുവാക്കൾ നമ്മുടെ കർത്താവായ യേശുക്രിസ്തുവിന്റെ ഹൃദയത്തോട് വളരെ അടുത്തവരാണ് ."യഹോവ ഭക്തി  ജ്ഞാനത്തിന്റെ ആരംഭവും; പരിശുദ്ധനെക്കുറിച്ചുള്ള പരിജ്ഞാനം വിവേകമാകുന്നു." സാദൃശ്യവാക്യങ്ങൾ 9 :10 ,11 
             </p>
             <a href="about.html">
               Read More
@@ -595,7 +485,6 @@
               </h4>
               <div class="info_links_menu">
                 <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
-                <a class="" href="service.html">Services</a>
                 <a class="" href="about.html"> About</a>
                 <a class="" href="activities.html">Project</a>
                 <a class="" href="testimonial.html">Testimonial</a>
