--- a/about.html
+++ b/about.html
@@ -118,10 +118,10 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                St.ജോർജ്ജ്  യൂത്ത് അസോസിയേഷൻ ചേലക്കര 
+                St.ജോർജ്ജ് യൂത്ത് അസോസിയേഷൻ ചേലക്കര 
               </h2>
               <p>
-                സെന്റ് ജോർജ്ജ്  യൂത്ത് അസോസിയേഷൻ ചേലക്കര സെന്റ് ജോർജ്ജ്  യൂത്ത് അസോസിയേഷൻ ചേലക്കര, യാക്കോബായ സിറിയൻ ഓർത്തഡോക്സ് യൂത്ത് അസോസിയേഷന്റെ ഭാഗമായി ചേലക്കര സെന്റ് ജോർജ്ജ് യാക്കോബായ സുറിയാനി പള്ളിക്ക് കീഴിൽ പ്രവർത്തിക്കുന്ന  ആത്മീയ സംഘടനയാണ്. 
+                സെന്റ് ജോർജ്ജ്  യൂത്ത് അസോസിയേഷൻ ചേലക്കര, യാക്കോബായ സിറിയൻ ഓർത്തഡോക്സ് യൂത്ത് അസോസിയേഷന്റെ ഭാഗമായി ചേലക്കര സെന്റ് ജോർജ്ജ് യാക്കോബായ സുറിയാനി പള്ളിക്ക് കീഴിൽ പ്രവർത്തിക്കുന്ന  ആത്മീയ സംഘടനയാണ്. 
                 യുവാക്കൾ നമ്മുടെ കർത്താവായ യേശുക്രിസ്തുവിന്റെ ഹൃദയത്തോട് വളരെ അടുത്തവരാണ് ."യഹോവ ഭക്തി  ജ്ഞാനത്തിന്റെ ആരംഭവും; പരിശുദ്ധനെക്കുറിച്ചുള്ള പരിജ്ഞാനം വിവേകമാകുന്നു." സാദൃശ്യവാക്യങ്ങൾ 9 :10 ,11 
               </p>
               <p> 
