--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Why Choose Us?
+          Managing Comittee 2023-24
         </h2>
       </div>
       <div class="why_us_container">
@@ -332,7 +332,10 @@
           </div>
           <div class="detail-box">
             <h5>
-              Project done on time
+              ഫാ. കുര്യാക്കോസ് വൈദ്യൻപറമ്പിൽ 
+            <h6>
+              പ്രസിഡന്റ് 
+            </h6>
             </h5>
             <p>
               Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,
@@ -348,7 +351,10 @@
           </div>
           <div class="detail-box">
             <h5>
-              Always avaliable
+              ലിനോ വിൽ‌സൺ 
+            <h6>
+              സെക്രട്ടറി 
+            </h6>
             </h5>
             <p>
               Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,
@@ -364,7 +370,10 @@
           </div>
           <div class="detail-box">
             <h5>
-              Professional and responsible
+              സനൂപ് സൈമൺ
+            <h6>
+              ട്രഷറർ 
+            </h6>
             </h5>
             <p>
               Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,
@@ -374,11 +383,44 @@
             </p>
           </div>
         </div>
-      </div>
-      <div class="btn-box">
-        <a href="">
-          Read More
-        </a>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/w3.png" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              റിയ സി സോണി
+            <h6>
+              ജോ . സെക്രട്ടറി 
+            </h6>
+            </h5>
+            <p>
+              Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in
+              Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
+              going through the
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/w3.png" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              എമിൽ ജോർജ്
+            <h6>
+              ജോ . സെക്രട്ടറി  
+            </h6>
+            </h5>
+            <p>
+              Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in
+              Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
+              going through the
+            </p>
+          </div>
+        </div>        
       </div>
     </div>
   </section>
