--- a/index.html
+++ b/index.html
@@ -325,104 +325,23 @@
           Managing Comittee 2023-24
         </h2>
       </div>
-      <div class="why_us_container">
-        <div class="box">
-          <div class="img-box">
-            <img src="images/w1.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              ഫാ. കുര്യാക്കോസ് വൈദ്യൻപറമ്പിൽ 
-            <h6>
-              പ്രസിഡന്റ് 
-            </h6>
-            </h5>
-            <p>
-              Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in
-              Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
-              going through the
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/w2.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              ലിനോ വിൽ‌സൺ 
-            <h6>
-              സെക്രട്ടറി 
-            </h6>
-            </h5>
-            <p>
-              Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in
-              Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
-              going through the
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/w3.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              സനൂപ് സൈമൺ
-            <h6>
-              ട്രഷറർ 
-            </h6>
-            </h5>
-            <p>
-              Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in
-              Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
-              going through the
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/w3.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              റിയ സി സോണി
-            <h6>
-              ജോ . സെക്രട്ടറി 
-            </h6>
-            </h5>
-            <p>
-              Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in
-              Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
-              going through the
-            </p>
-          </div>
-        </div>
-        <div class="box">
-          <div class="img-box">
-            <img src="images/w3.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h5>
-              എമിൽ ജോർജ്
-            <h6>
-              ജോ . സെക്രട്ടറി  
-            </h6>
-            </h5>
-            <p>
-              Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in
-              Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
-              going through the
-            </p>
-          </div>
-        </div>        
+      <div class="committee-member">
+        <img src="lino.jpg" alt="Member 1">
+        <p>ലിനോ വിൽ‌സൺ </p>
       </div>
-    </div>
+      <div class="committee-member">
+        <img src="sanoop.jpg" alt="Member 1">
+        <p>സനൂപ് സൈമൺ e</p>
+      </div>
+      <div class="committee-member">
+        <img src="lino.jpg" alt="Member 1">
+        <p>ലിനോ വിൽ‌സൺ </p>
+      </div>
+      <div class="committee-member">
+        <img src="sanoop.jpg" alt="Member 1">
+        <p>സനൂപ് സൈമൺ e</p>
+      </div>
+      </div>
   </section>
 
   <!-- end why us section -->
