--- a/index.html
+++ b/index.html
@@ -326,20 +326,14 @@
         </h2>
       </div>
       <div class="committee-member">
-        <img src="lino.jpg" alt="Member 1">
+        <img src="images/lino.jpg" alt="Member 1">
         <p>ലിനോ വിൽ‌സൺ </p>
-      </div>
-      <div class="committee-member">
-        <img src="sanoop.jpg" alt="Member 1">
-        <p>സനൂപ് സൈമൺ e</p>
-      </div>
-      <div class="committee-member">
-        <img src="lino.jpg" alt="Member 1">
+        <img src="images/sanoop.jpg" alt="Member 2">
+        <p>സനൂപ് സൈമൺ</p>
+        <img src="images/lino.jpg" alt="Member 3">
         <p>ലിനോ വിൽ‌സൺ </p>
-      </div>
-      <div class="committee-member">
-        <img src="sanoop.jpg" alt="Member 1">
-        <p>സനൂപ് സൈമൺ e</p>
+        <img src="images/sanoop.jpg" alt="Member 4">
+        <p>സനൂപ് സൈമൺ</p>
       </div>
       </div>
   </section>
