--- a/index.html
+++ b/index.html
@@ -328,12 +328,18 @@
       <div class="committee-member">
         <img src="images/lino.jpg" alt="Member 1">
         <p>ലിനോ വിൽ‌സൺ </p>
+      </div>
+      <div class="committee-member">
         <img src="images/sanoop.jpg" alt="Member 2">
-        <p>സനൂപ് സൈമൺ</p>
+        <p>സനൂപ് സൈമൺ e</p>
+      </div>
+      <div class="committee-member">
         <img src="images/lino.jpg" alt="Member 3">
         <p>ലിനോ വിൽ‌സൺ </p>
+      </div>
+      <div class="committee-member">
         <img src="images/sanoop.jpg" alt="Member 4">
-        <p>സനൂപ് സൈമൺ</p>
+        <p>സനൂപ് സൈമൺ e</p>
       </div>
       </div>
   </section>
