--- a/index.html
+++ b/index.html
@@ -325,23 +325,74 @@
           Managing Comittee 2023-24
         </h2>
       </div>
-        <div class="committee-member">
-          <img src="images/lino.jpg" alt="Member 1">
-          <p>ലിനോ വിൽ‌സൺ </p>
+      <div class="why_us_container">
+        <div class="box">
+          <div class="img-box">
+            <img src="images/lino.jpg" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              ഫാ. കുര്യാക്കോസ് വൈദ്യൻപറമ്പിൽ 
+            <h6>
+              പ്രസിഡന്റ് 
+            </h6>
+            </h5>
+          </div>
         </div>
-        <div class="committee-member">
-          <img src="images/sanoop.jpg" alt="Member 2">
-          <p>സനൂപ് സൈമൺ e</p>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/lino.jpg" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              ലിനോ വിൽ‌സൺ 
+            <h6>
+              സെക്രട്ടറി 
+            </h6>
+            </h5>
+          </div>
         </div>
-        <div class="committee-member">
-          <img src="images/lino.jpg" alt="Member 3">
-          <p>ലിനോ വിൽ‌സൺ </p>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/sanoop.jpg" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              സനൂപ് സൈമൺ
+            <h6>
+              ട്രഷറർ 
+            </h6>
+            </h5>
+          </div>
         </div>
-        <div class="committee-member">
-          <img src="images/sanoop.jpg" alt="Member 4">
-          <p>സനൂപ് സൈമൺ e</p>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/lino.jpg" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              റിയ സി സോണി
+            <h6>
+              ജോ . സെക്രട്ടറി 
+            </h6>
+            </h5>
+          </div>
         </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/lino.jpg" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              എമിൽ ജോർജ്
+            <h6>
+              ജോ . സെക്രട്ടറി  
+            </h6>
+            </h5>
+          </div>
+        </div>        
       </div>
+    </div>
   </section>
 
   <!-- end why us section -->
