--- a/index.html
+++ b/index.html
@@ -326,8 +326,10 @@
         </h2>
       </div>
       <div class="why_us_container">
-        <div class="img-box">
+        <div class="box">
+          <div class="img-box">
             <img src="images/lino.jpg" alt="">
+          </div>
           <div class="detail-box">
             <h5>
               ഫാ. കുര്യാക്കോസ് വൈദ്യൻപറമ്പിൽ 
@@ -337,8 +339,10 @@
             </h5>
           </div>
         </div>
-        <div class="img-box">
+        <div class="box">
+          <div class="img-box">
             <img src="images/lino.jpg" alt="">
+          </div>
           <div class="detail-box">
             <h5>
               ലിനോ വിൽ‌സൺ 
@@ -348,8 +352,10 @@
             </h5>
           </div>
         </div>
-        <div class="img-box">
+        <div class="box">
+          <div class="img-box">
             <img src="images/sanoop.jpg" alt="">
+          </div>
           <div class="detail-box">
             <h5>
               സനൂപ് സൈമൺ
@@ -359,8 +365,10 @@
             </h5>
           </div>
         </div>
-        <div class="img-box">
+        <div class="box">
+          <div class="img-box">
             <img src="images/lino.jpg" alt="">
+          </div>
           <div class="detail-box">
             <h5>
               റിയ സി സോണി
@@ -370,8 +378,10 @@
             </h5>
           </div>
         </div>
-        <div class="img-box">
+        <div class="box">
+          <div class="img-box">
             <img src="images/lino.jpg" alt="">
+          </div>
           <div class="detail-box">
             <h5>
               എമിൽ ജോർജ്
