--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
       </div>
       <div class="why_us_container">
         <div class="box">
-          <div class="img-box">
+          <div class="box">
             <img src="images/lino.jpg" alt="">
           </div>
           <div class="detail-box">
@@ -340,7 +340,7 @@
           </div>
         </div>
         <div class="box">
-          <div class="img-box">
+          <div class="box">
             <img src="images/lino.jpg" alt="">
           </div>
           <div class="detail-box">
@@ -353,7 +353,7 @@
           </div>
         </div>
         <div class="box">
-          <div class="img-box">
+          <div class="box">
             <img src="images/sanoop.jpg" alt="">
           </div>
           <div class="detail-box">
@@ -366,7 +366,7 @@
           </div>
         </div>
         <div class="box">
-          <div class="img-box">
+          <div class="box">
             <img src="images/lino.jpg" alt="">
           </div>
           <div class="detail-box">
@@ -379,7 +379,7 @@
           </div>
         </div>
         <div class="box">
-          <div class="img-box">
+          <div class="box">
             <img src="images/lino.jpg" alt="">
           </div>
           <div class="detail-box">
