--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         </h2>
       </div>
       <div class="why_us_container">
-        <div class="box">
+        <div class="img-box">
           <div class="box">
             <img src="images/lino.jpg" alt="">
           </div>
@@ -339,7 +339,7 @@
             </h5>
           </div>
         </div>
-        <div class="box">
+        <div class="img-box">
           <div class="box">
             <img src="images/lino.jpg" alt="">
           </div>
@@ -352,7 +352,7 @@
             </h5>
           </div>
         </div>
-        <div class="box">
+        <div class="img-box">
           <div class="box">
             <img src="images/sanoop.jpg" alt="">
           </div>
@@ -365,7 +365,7 @@
             </h5>
           </div>
         </div>
-        <div class="box">
+        <div class="img-box">
           <div class="box">
             <img src="images/lino.jpg" alt="">
           </div>
@@ -378,7 +378,7 @@
             </h5>
           </div>
         </div>
-        <div class="box">
+        <div class="img-box">
           <div class="box">
             <img src="images/lino.jpg" alt="">
           </div>
