--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         </div>
         <div class="img-box">
           <div class="img-box">
-            <img src="images/lino.jpg" alt="">
+            <img src="images/lino.jpg" alt="" width="300" height="200">
           </div>
           <div class="detail-box">
             <h5>
