--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       <div class="why_us_container">
         <div class="img-box">
           <div class="img-box">
-            <img src="images/lino.jpg" alt="">
+            <img src="images/lino.jpg" alt=""  width="150" height="150">
           </div>
           <div class="detail-box">
             <h5>
@@ -341,7 +341,7 @@
         </div>
         <div class="img-box">
           <div class="img-box">
-            <img src="images/lino.jpg" alt="">
+            <img src="images/lino.jpg" alt=""  width="150" height="150">
           </div>
           <div class="detail-box">
             <h5>
@@ -354,7 +354,7 @@
         </div>
         <div class="img-box">
           <div class="img-box">
-            <img src="images/sanoop.jpg" alt="">
+            <img src="images/sanoop.jpg" alt=""  width="150" height="150">
           </div>
           <div class="detail-box">
             <h5>
@@ -367,7 +367,7 @@
         </div>
         <div class="img-box">
           <div class="img-box">
-            <img src="images/lino.jpg" alt="">
+            <img src="images/lino.jpg" alt=""  width="150" height="150">
           </div>
           <div class="detail-box">
             <h5>
@@ -380,7 +380,7 @@
         </div>
         <div class="img-box">
           <div class="img-box">
-            <img src="images/lino.jpg" alt="" width="300" height="200">
+            <img src="images/lino.jpg" alt="" width="150" height="150">
           </div>
           <div class="detail-box">
             <h5>
