--- a/gallery.html
+++ b/gallery.html
@@ -115,7 +115,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Testimonial
+          Gallery
         </h2>
       </div>
     </div>
@@ -125,34 +125,11 @@
           <div class="container">
             <div class="row">
               <div class="col-md-10 mx-auto">
-                <div class="box">
+                <div class="img-box">
                   <div class="img-box">
-                    <img src="images/client.jpg" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <div class="client_info">
-                      <div class="client_name">
-                        <h5>
-                          Morojink
-                        </h5>
-                        <h6>
-                          Customer
-                        </h6>
-                      </div>
-                      <i class="fa fa-quote-left" aria-hidden="true"></i>
-                    </div>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et
-                      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                      aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                      cillum
-                      dolore eu fugia
-                    </p>
+                    <img src="images/lino.jpg" alt=""  width="300" height="200">
                   </div>
                 </div>
-              </div>
             </div>
           </div>
         </div>
