--- a/gallery.html
+++ b/gallery.html
@@ -115,7 +115,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Gallery
+          Testimonial
         </h2>
       </div>
     </div>
@@ -125,11 +125,12 @@
           <div class="container">
             <div class="row">
               <div class="col-md-10 mx-auto">
-                <div class="img-box">
+                <div class="box">
                   <div class="img-box">
-                    <img src="images/lino.jpg" alt=""  width="300" height="200">
+                    <img src="images/client.jpg" alt="">
                   </div>
                 </div>
+              </div>
             </div>
           </div>
         </div>
