--- a/gallery.html
+++ b/gallery.html
@@ -125,11 +125,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-10 mx-auto">
-                <div class="box">
-                  <div class="img-box">
-                    <img src="images/client.jpg" alt="">
-                  </div>
-                </div>
+                    <img src="images/lino.jpg" alt=""  width="150" height="150">
               </div>
             </div>
           </div>
