--- a/gallery.html
+++ b/gallery.html
@@ -125,7 +125,9 @@
           <div class="container">
             <div class="row">
               <div class="col-md-10 mx-auto">
+                <div class="detail-box">
                     <img src="images/lino.jpg" alt=""  width="150" height="150">
+                </div>
               </div>
             </div>
           </div>
