--- a/gallery.html
+++ b/gallery.html
@@ -126,7 +126,7 @@
             <div class="row">
               <div class="col-md-10 mx-auto">
                 <div class="detail-box">
-                    <img src="images/lino.jpg" alt=""  width="150" height="150">
+                    <img src="images/lino.jpg" alt=""  width="350" height="250" style="max-width: 100%; height: auto;" >
                 </div>
               </div>
             </div>
