--- a/gallery.html
+++ b/gallery.html
@@ -125,7 +125,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-10 mx-auto">
-                    <img src="images/lino.jpg" alt=""  width="350" height="250" style="max-width: 100%; height: auto;" >
+                    <img src="images/lino.jpg" alt="gallery"  width="350" height="250" style="display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0;" >
               </div>
             </div>
           </div>
