--- a/gallery.html
+++ b/gallery.html
@@ -115,7 +115,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Testimonial
+          Gallery
         </h2>
       </div>
     </div>
@@ -125,7 +125,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-10 mx-auto">
-                    <img src="images/lino.jpg" alt="gallery"  width="350" height="250" style="display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0;" >
+                    <img src="images/lino.jpg" alt="gallery"  width="350" height="250" style="display: flex; justify-content: center; align-items: center; margin: 0;" >
               </div>
             </div>
           </div>
