updated index with activity

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       <div class="carousel-wrap ">
         <div class="filter_box">
           <h6>
-            Category filter
+            Category
           </h6>
           <nav class="owl-filter-bar">
             <a href="#" class="item active" data-owl-filter="*">All</a>
@@ -268,13 +268,18 @@
             <div class="box">
               <div class="img-box">
                 <img src="images/book_1.jpg" alt="" />
+                <img src="images/book_3.jpg" alt="" />
+              </div>
+              <div class="img-box">
+                <img src="images/book_1.jpg" alt="" />
+                <img src="images/book_3.jpg" alt="" />
               </div>
               <div class="detail-box">
                 <h5>
-                  പുസ്തക വിതരണം
+                  പുസ്തക വിതരണം 2024
                 </h5>
                 <p>
-                  സെന്റ് ജോർജ് യൂത്ത് അസോസിയേഷൻ (എസ്.ജി.വൈ.എ) എല്ലാ വർഷവും ദരിദ്രരായ വിദ്യാർത്ഥികൾക്ക് പഠനോപകരണങ്ങൾ നൽകുന്നതിന് പ്രതിജ്ഞാബദ്ധമാണ്. സാമ്പത്തിക പരിമിതികൾ കാരണം ഒരു വിദ്യാർത്ഥിയും പിന്നിലല്ലെന്ന് എസ്.ജി.വൈ.എ ഉറപ്പാക്കുന്നു. ഞങ്ങളുടെ വാർഷിക സംഭാവന പരിപാടിയിലൂടെ, അർഹരായ വിദ്യാർത്ഥികൾക്ക് പാഠപുസ്തകങ്ങൾ, നോട്ട്ബുക്കുകൾ, സ്റ്റേഷനറി എന്നിവ സംഭാവന ചെയ്യുന്നു, ഇത് അവരുടെ വിദ്യാഭ്യാസ ലക്ഷ്യങ്ങൾ പിന്തുടരാൻ അവരെ ശാക്തീകരിക്കുന്നു. 
+                  സെന്റ് ജോർജ് യൂത്ത് അസോസിയേഷൻ (എസ്.ജി.വൈ.എ) എല്ലാ വർഷവും പാവപ്പെട്ട വിദ്യാർത്ഥികൾക്ക് പഠനോപകരണങ്ങൾ നൽകുന്നതിന് പ്രതിജ്ഞാബദ്ധരാണ്. സാമ്പത്തിക പരിമിതികൾ കാരണം ഒരു വിദ്യാർത്ഥിയും പിന്നിലല്ലെന്ന് എസ്.ജി.വൈ.എ ഉറപ്പാക്കുന്നു. എല്ലാ വർഷവും ഞങ്ങൾ അർഹരായ വിദ്യാർത്ഥികൾക്ക് പാഠപുസ്തകങ്ങൾ, നോട്ട്ബുക്കുകൾ, സ്റ്റേഷനറി എന്നിവ സംഭാവന ചെയ്യുന്നു, ഇത് അവരുടെ വിദ്യാഭ്യാസ ലക്ഷ്യങ്ങൾ പിന്തുടരാൻ അവരെ ശാക്തീകരിക്കുന്നു. 
                 </p>
               </div>
             </div>
@@ -289,7 +294,7 @@
                   സ്പോർട്സ്
                 </h5>
                 <p>
-                  under process
+                  മേഖല തലത്തിലും ഭദ്രാസന തലത്തിലും വർഷംതോറും നടത്തപ്പെടുന്ന ക്രിക്കറ്റ് , ഫുട്ബോൾ, ബാറ്റ്മിന്റൺ ടൂർണമെന്റുകളിൽ സജീവമായി പങ്കെടുക്കാനും, അവയിൽ പലതിലും ചാമ്പ്യൻമാരാവാനും ടെവകൃപയാൽ സാധിച്ചു.
                 </p>
               </div>
             </div>
@@ -304,7 +309,7 @@
                   പരിസ്ഥിതി ദിനം
                 </h5>
                 <p>
-                  under process
+                  നാളത്തെ തലമുറക്കായി നമ്മുടെ പരിസ്ഥിതിയെ സംരക്ഷിക്കേണ്ടത് തികച്ചും അത്യന്താപേക്ഷിതമാണ് . അതിനു നേതൃത്വം നൽകി സമൂഹത്തിനു നല്ലരു സന്ദേശം നൽകാൻ ഞങ്ങൾ യുവാക്കൾ പ്രതിജ്ഞാബദ്ധരാണ് .
                 </p>
               </div>
             </div>
