updated index with activity

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a href="https://www.facebook.com/ChelakkaraSGYA/">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/sgya_chelakkara/">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -268,11 +268,19 @@
             <div class="box">
               <div class="img-box">
                 <img src="images/book_1.jpg" alt="" />
-                <img src="images/book_3.jpg" alt="" />
               </div>
+              <div class="detail-box">
+                <h5>
+                  പുസ്തക വിതരണം 2023
+                </h5>
+                <p>
+                  സെന്റ് ജോർജ് യൂത്ത് അസോസിയേഷൻ (എസ്.ജി.വൈ.എ) എല്ലാ വർഷവും പാവപ്പെട്ട വിദ്യാർത്ഥികൾക്ക് പഠനോപകരണങ്ങൾ നൽകുന്നതിന് പ്രതിജ്ഞാബദ്ധരാണ്. സാമ്പത്തിക പരിമിതികൾ കാരണം ഒരു വിദ്യാർത്ഥിയും പിന്നിലല്ലെന്ന് എസ്.ജി.വൈ.എ ഉറപ്പാക്കുന്നു. എല്ലാ വർഷവും ഞങ്ങൾ അർഹരായ വിദ്യാർത്ഥികൾക്ക് പാഠപുസ്തകങ്ങൾ, നോട്ട്ബുക്കുകൾ, സ്റ്റേഷനറി എന്നിവ സംഭാവന ചെയ്യുന്നു, ഇത് അവരുടെ വിദ്യാഭ്യാസ ലക്ഷ്യങ്ങൾ പിന്തുടരാൻ അവരെ ശാക്തീകരിക്കുന്നു. 
+                </p>
+              </div>
+            </div>
+            <div class="box">
               <div class="img-box">
                 <img src="images/book_1.jpg" alt="" />
-                <img src="images/book_3.jpg" alt="" />
               </div>
               <div class="detail-box">
                 <h5>
@@ -282,7 +290,7 @@
                   സെന്റ് ജോർജ് യൂത്ത് അസോസിയേഷൻ (എസ്.ജി.വൈ.എ) എല്ലാ വർഷവും പാവപ്പെട്ട വിദ്യാർത്ഥികൾക്ക് പഠനോപകരണങ്ങൾ നൽകുന്നതിന് പ്രതിജ്ഞാബദ്ധരാണ്. സാമ്പത്തിക പരിമിതികൾ കാരണം ഒരു വിദ്യാർത്ഥിയും പിന്നിലല്ലെന്ന് എസ്.ജി.വൈ.എ ഉറപ്പാക്കുന്നു. എല്ലാ വർഷവും ഞങ്ങൾ അർഹരായ വിദ്യാർത്ഥികൾക്ക് പാഠപുസ്തകങ്ങൾ, നോട്ട്ബുക്കുകൾ, സ്റ്റേഷനറി എന്നിവ സംഭാവന ചെയ്യുന്നു, ഇത് അവരുടെ വിദ്യാഭ്യാസ ലക്ഷ്യങ്ങൾ പിന്തുടരാൻ അവരെ ശാക്തീകരിക്കുന്നു. 
                 </p>
               </div>
-            </div>
+            </div>            
           </div>
           <div class="item sports">
             <div class="box">
@@ -402,63 +410,14 @@
 
   <!-- end why us section -->
 
-  <!-- contact section -->
-  <section class="contact_section layout_padding-bottom">
-    <div class="container-fluid">
-      <div class="col-lg-4 col-md-5 offset-md-1">
-        <div class="heading_container">
-          <h2>
-            Contact Us
-          </h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-4 col-md-5 offset-md-1">
-          <div class="form_container">
-            <form action="">
-              <div>
-                <input type="text" placeholder="Your Name" />
-              </div>
-              <div>
-                <input type="text" placeholder="Phone Number" />
-              </div>
-              <div>
-                <input type="email" placeholder="Email" />
-              </div>
-              <div>
-                <input type="text" class="message-box" placeholder="Message" />
-              </div>
-              <div class="btn_box">
-                <button>
-                  SEND
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-        <div class="col-lg-7 col-md-6 px-0">
-          <div class="map_container">
-            <div class="map">
-              <div id="googleMap"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- end contact section -->
+  
 
   <!-- info section -->
   <section class="info_section ">
 
     <div class="container">
       <div class="contact_nav">
-        <a href="">
-          <i class="fa fa-phone" aria-hidden="true"></i>
-          <span>
-            Call : +91 123455678990
-          </span>
-        </a>
+
         <a href="">
           <i class="fa fa-envelope" aria-hidden="true"></i>
           <span>
@@ -506,7 +465,7 @@
               <a href="https://www.facebook.com/ChelakkaraSGYA/">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
-              <a href="">
+              <a href="https://www.instagram.com/sgya_chelakkara/">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </div>
