updated index photos

--- a/index.html
+++ b/index.html
@@ -267,30 +267,31 @@
           <div class="item charity">
             <div class="box">
               <div class="img-box">
-                <img src="images/book_1.jpg" alt="" />
+                <img src="images/book-final.jpg" alt="" />
               </div>
               <div class="detail-box">
                 <h5>
-                  പുസ്തക വിതരണം 2023
+                  പുസ്തക വിതരണം
                 </h5>
                 <p>
                   സെന്റ് ജോർജ് യൂത്ത് അസോസിയേഷൻ (എസ്.ജി.വൈ.എ) എല്ലാ വർഷവും പാവപ്പെട്ട വിദ്യാർത്ഥികൾക്ക് പഠനോപകരണങ്ങൾ നൽകുന്നതിന് പ്രതിജ്ഞാബദ്ധരാണ്. സാമ്പത്തിക പരിമിതികൾ കാരണം ഒരു വിദ്യാർത്ഥിയും പിന്നിലല്ലെന്ന് എസ്.ജി.വൈ.എ ഉറപ്പാക്കുന്നു. എല്ലാ വർഷവും ഞങ്ങൾ അർഹരായ വിദ്യാർത്ഥികൾക്ക് പാഠപുസ്തകങ്ങൾ, നോട്ട്ബുക്കുകൾ, സ്റ്റേഷനറി എന്നിവ സംഭാവന ചെയ്യുന്നു, ഇത് അവരുടെ വിദ്യാഭ്യാസ ലക്ഷ്യങ്ങൾ പിന്തുടരാൻ അവരെ ശാക്തീകരിക്കുന്നു. 
                 </p>
               </div>
-            </div>
+            </div> 
             <div class="box">
               <div class="img-box">
-                <img src="images/book_1.jpg" alt="" />
+                <img src="images/dia.jpg" alt="" />
               </div>
               <div class="detail-box">
                 <h5>
-                  പുസ്തക വിതരണം 2024
+                  ഡയലിസിസ് രോഗികൾക്ക് കൈതാങ്ങായി ധനസഹായം നൽകി
                 </h5>
                 <p>
-                  സെന്റ് ജോർജ് യൂത്ത് അസോസിയേഷൻ (എസ്.ജി.വൈ.എ) എല്ലാ വർഷവും പാവപ്പെട്ട വിദ്യാർത്ഥികൾക്ക് പഠനോപകരണങ്ങൾ നൽകുന്നതിന് പ്രതിജ്ഞാബദ്ധരാണ്. സാമ്പത്തിക പരിമിതികൾ കാരണം ഒരു വിദ്യാർത്ഥിയും പിന്നിലല്ലെന്ന് എസ്.ജി.വൈ.എ ഉറപ്പാക്കുന്നു. എല്ലാ വർഷവും ഞങ്ങൾ അർഹരായ വിദ്യാർത്ഥികൾക്ക് പാഠപുസ്തകങ്ങൾ, നോട്ട്ബുക്കുകൾ, സ്റ്റേഷനറി എന്നിവ സംഭാവന ചെയ്യുന്നു, ഇത് അവരുടെ വിദ്യാഭ്യാസ ലക്ഷ്യങ്ങൾ പിന്തുടരാൻ അവരെ ശാക്തീകരിക്കുന്നു. 
+                  ചേലക്കര സെന്റ് ജോർജ്ജ് യൂത്ത് അസോസിയേഷന്റെ ചാരിറ്റി പ്രവർത്തനങ്ങളുടെ ഭാഗമായി , യാക്കോബായ സുറിയാനി സഭയുടെ പെരുമ്പാവൂരിൽ പ്രവർത്തിച്ചുവരുന്ന കൊയ്നോണിയ മിഷൻ ഹോസ്പിറ്റലിന്റെ എൽദോ മോർ ബസേലിയോസ് ഡയാലിസിസ് സെന്ററിലെ രോഗികൾക്ക് കൈതാങ്ങായി ധനസഹായം നൽകി. ഇടവക വികാരി ഫാ. കുരിയാക്കോസ് വൈദ്യൻ പറമ്പിൽ  അങ്കമാലി ഭദ്രാസനം,പെരുമ്പാവൂർ മേഖല മെത്രാപ്പോലീത്ത അഭിവന്ദ്യ മാത്യുസ് മോർ അപ്രേം മെത്രാപ്പോലീത്തക്ക്  ഡയലിസിസ് രോഗികൾക്കുള്ള തുക കൈമാറി.
+ 
                 </p>
               </div>
-            </div>            
+            </div>                       
           </div>
           <div class="item sports">
             <div class="box">
@@ -354,11 +355,11 @@
         </div>
         <div class="img-box">
           <div class="img-box">
-            <img src="images/lino.jpg" alt=""  width="150" height="150">
+            <img src="images/shibin.jpg" alt=""  width="150" height="150">
           </div>
           <div class="detail-box">
             <h5>
-              ലിനോ വിൽ‌സൺ 
+              ഷിബിൻ ഷാന്റി 
             <h6>
               സെക്രട്ടറി 
             </h6>
@@ -367,43 +368,95 @@
         </div>
         <div class="img-box">
           <div class="img-box">
-            <img src="images/sanoop.jpg" alt=""  width="150" height="150">
+            <img src="images/sijin.jpg" alt=""  width="150" height="150">
           </div>
           <div class="detail-box">
             <h5>
-              സനൂപ് സൈമൺ
+              സിജിൻ കെ ജോർജ്ജ് 
             <h6>
-              ട്രഷറർ 
+              വൈസ് പ്രസിഡന്റ് 
             </h6>
             </h5>
           </div>
         </div>
+        <div class="img-box">
+          <div class="img-box">
+            <img src="images/gidel.jpg" alt=""  width="150" height="150">
+          </div>
+          <div class="detail-box">
+            <h5>
+              ഗീഥേൽ ജിജു 
+            <h6>
+              ജോ.സെക്രട്ടറി 
+            </h6>
+            </h5>
+          </div>
+        </div>
+        <div class="img-box">
+          <div class="img-box">
+            <img src="images/ruth.jpg" alt=""  width="150" height="150">
+          </div>
+          <div class="detail-box">
+            <h5>
+              രൂത്ത് വിൽ‌സൺ 
+            <h6>
+              ജോ.സെക്രട്ടറി 
+            </h6>
+            </h5>
+          </div>
+        </div>
+        <div class="img-box">
+          <div class="img-box">
+            <img src="images/eldho.jpg" alt="" width="150" height="150">
+          </div>
+          <div class="detail-box">
+            <h5>
+              എൽദോ ചാർളി
+            <h6>
+              ട്രഷറർ  
+            </h6>
+            </h5>
+          </div>
+        </div> 
         <div class="img-box">
           <div class="img-box">
             <img src="images/lino.jpg" alt=""  width="150" height="150">
           </div>
           <div class="detail-box">
             <h5>
-              റിയ സി സോണി
+              ലിനോ വിൽ‌സൺ  
             <h6>
-              ജോ . സെക്രട്ടറി 
+              ഭദ്രാസന പ്രതിനിധി 
             </h6>
             </h5>
           </div>
         </div>
         <div class="img-box">
           <div class="img-box">
-            <img src="images/lino.jpg" alt="" width="150" height="150">
+            <img src="images/godwin.JPG" alt=""  width="150" height="150">
           </div>
           <div class="detail-box">
             <h5>
-              എമിൽ ജോർജ്
+              ഗോഡ്‌വിൻ പുലിക്കോട്ടിൽ 
             <h6>
-              ജോ . സെക്രട്ടറി  
+              ചാരിറ്റി കോർഡിനേറ്റർ  
             </h6>
             </h5>
           </div>
-        </div>        
+        </div> 
+        <div class="img-box">
+          <div class="img-box">
+            <img src="images/lino.jpg" alt=""  width="150" height="150">
+          </div>
+          <div class="detail-box">
+            <h5>
+              സിബിൻ സി ബെന്നി 
+            <h6>
+              സ്പോർട്സ് കോർഡിനേറ്റർ 
+            </h6>
+            </h5>
+          </div>
+        </div>      
       </div>
     </div>
   </section>
@@ -443,7 +496,7 @@
                 <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
                 <a class="" href="about.html"> About</a>
                 <a class="" href="activities.html">Project</a>
-                <a class="" href="testimonial.html">Testimonial</a>
+                <a class="" href="gallery.html">Gallery</a>
                 <a class="" href="contact.html">Contact Us</a>
               </div>
             </div>
