updated index photos

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
       <div class="why_us_container">
         <div class="img-box">
           <div class="img-box">
-            <img src="images/lino.jpg" alt=""  width="150" height="150">
+            <img src="images/achan.jpg" alt=""  width="150" height="150">
           </div>
           <div class="detail-box">
             <h5>
