updated index photos

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
         </div> 
         <div class="img-box">
           <div class="img-box">
-            <img src="images/lino.jpg" alt=""  width="150" height="150">
+            <img src="images/shibin.jpg" alt=""  width="150" height="150">
           </div>
           <div class="detail-box">
             <h5>
